--- a/index.html
+++ b/index.html
@@ -10,74 +10,74 @@
 
     <body style="background: #87CEEB;">
         <h1 style="font-family: fantasy; text-align: center; margin-top: 10px; justify-content: space-around;">Top Movies</h1>
-        <div class="card-deck" style="display: grid; grid-template-columns: 1fr 1fr 1fr 1fr; margin-top: 25px; margin-left: 2%">
-            <div class="card text-white bg-dark mb-3" style="max-width: 18rem; max-heigth: 18rem">
-                <h4 class="card-header">The Shawshank Redemption</h4>
+        <div class="card-deck" style="display: grid; grid-template-columns: 1fr 1fr 1fr 1fr; margin-top: 25px; margin-left: 2%; align-items: center;">
+            <div class="card text-white bg-dark mb-3" style="width: 18rem;align-items: center;">
+                <h4 class="card-header" style="height: 90px;">The Shawshank Redemption</h4>
                 <div class="card-body">
-                    <img class="card-img" src="https://raw.githubusercontent.com/alura-cursos/imersao-java-2-api/main/TopMovies_1.jpg" alt="image">
+                    <img class="card-img" src="https://raw.githubusercontent.com/alura-cursos/imersao-java-2-api/main/TopMovies_1.jpg" alt="image" style="height: 350px">
                     <p class="card-text mt-2">Nota: 9.2 - Ano: 1994</p>
                 </div>
             </div>
-            <div class="card text-white bg-dark mb-3" style="max-width: 18rem; max-heigth: 18rem">
-                <h4 class="card-header">The Godfather</h4>
+            <div class="card text-white bg-dark mb-3" style="width: 18rem;align-items: center;">
+                <h4 class="card-header" style="height: 90px;">The Godfather</h4>
                 <div class="card-body">
-                    <img class="card-img" src="https://raw.githubusercontent.com/alura-cursos/imersao-java-2-api/main/TopMovies_2.jpg" alt="image">
+                    <img class="card-img" src="https://raw.githubusercontent.com/alura-cursos/imersao-java-2-api/main/TopMovies_2.jpg" alt="image" style="height: 350px">
                     <p class="card-text mt-2">Nota: 9.2 - Ano: 1972</p>
                 </div>
             </div>
-            <div class="card text-white bg-dark mb-3" style="max-width: 18rem; max-heigth: 18rem">
-                <h4 class="card-header">The Dark Knight</h4>
+            <div class="card text-white bg-dark mb-3" style="width: 18rem;align-items: center;">
+                <h4 class="card-header" style="height: 90px;">The Dark Knight</h4>
                 <div class="card-body">
-                    <img class="card-img" src="https://raw.githubusercontent.com/alura-cursos/imersao-java-2-api/main/TopMovies_3.jpg" alt="image">
+                    <img class="card-img" src="https://raw.githubusercontent.com/alura-cursos/imersao-java-2-api/main/TopMovies_3.jpg" alt="image" style="height: 350px">
                     <p class="card-text mt-2">Nota: 9.0 - Ano: 2008</p>
                 </div>
             </div>
-            <div class="card text-white bg-dark mb-3" style="max-width: 18rem; max-heigth: 18rem">
-                <h4 class="card-header">The Godfather: Part II</h4>
+            <div class="card text-white bg-dark mb-3" style="width: 18rem;align-items: center;">
+                <h4 class="card-header" style="height: 90px;">The Godfather: Part II</h4>
                 <div class="card-body">
-                    <img class="card-img" src="https://raw.githubusercontent.com/alura-cursos/imersao-java-2-api/main/TopMovies_4.jpg" alt="image">
+                    <img class="card-img" src="https://raw.githubusercontent.com/alura-cursos/imersao-java-2-api/main/TopMovies_4.jpg" alt="image" style="height: 350px">
                     <p class="card-text mt-2">Nota: 9.0 - Ano: 1974</p>
                 </div>
             </div>
-            <div class="card text-white bg-dark mb-3" style="max-width: 18rem; max-heigth: 18rem">
-                <h4 class="card-header">12 Angry Men</h4>
+            <div class="card text-white bg-dark mb-3" style="width: 18rem;align-items: center;">
+                <h4 class="card-header" style="height: 90px;">12 Angry Men</h4>
                 <div class="card-body">
-                    <img class="card-img" src="https://raw.githubusercontent.com/alura-cursos/imersao-java-2-api/main/TopMovies_5.jpg" alt="image">
+                    <img class="card-img" src="https://raw.githubusercontent.com/alura-cursos/imersao-java-2-api/main/TopMovies_5.jpg" alt="image" style="height: 350px">
                     <p class="card-text mt-2">Nota: 8.9 - Ano: 1957</p>
                 </div>
             </div>
-            <div class="card text-white bg-dark mb-3" style="max-width: 18rem; max-heigth: 18rem">
-                <h4 class="card-header">Schindler's List</h4>
+            <div class="card text-white bg-dark mb-3" style="width: 18rem;align-items: center;">
+                <h4 class="card-header" style="height: 90px;">Schindler's List</h4>
                 <div class="card-body">
-                    <img class="card-img" src="https://raw.githubusercontent.com/alura-cursos/imersao-java-2-api/main/TopMovies_6.jpg" alt="image">
+                    <img class="card-img" src="https://raw.githubusercontent.com/alura-cursos/imersao-java-2-api/main/TopMovies_6.jpg" alt="image" style="height: 350px">
                     <p class="card-text mt-2">Nota: 8.9 - Ano: 1993</p>
                 </div>
             </div>
-            <div class="card text-white bg-dark mb-3" style="max-width: 18rem; max-heigth: 18rem">
-                <h4 class="card-header">The Lord of the Rings: The Return of the King</h4>
+            <div class="card text-white bg-dark mb-3" style="width: 18rem;align-items: center;">
+                <h4 class="card-header" style="height: 90px;">The Lord of the Rings: The Return of the King</h4>
                 <div class="card-body">
-                    <img class="card-img" src="https://raw.githubusercontent.com/alura-cursos/imersao-java-2-api/main/TopMovies_7.jpg" alt="image">
+                    <img class="card-img" src="https://raw.githubusercontent.com/alura-cursos/imersao-java-2-api/main/TopMovies_7.jpg" alt="image" style="height: 350px">
                     <p class="card-text mt-2">Nota: 8.9 - Ano: 2003</p>
                 </div>
             </div>
-            <div class="card text-white bg-dark mb-3" style="max-width: 18rem; max-heigth: 18rem">
-                <h4 class="card-header">Pulp Fiction</h4>
+            <div class="card text-white bg-dark mb-3" style="width: 18rem;align-items: center;">
+                <h4 class="card-header" style="height: 90px;">Pulp Fiction</h4>
                 <div class="card-body">
-                    <img class="card-img" src="https://raw.githubusercontent.com/alura-cursos/imersao-java-2-api/main/TopMovies_8.jpg" alt="image">
+                    <img class="card-img" src="https://raw.githubusercontent.com/alura-cursos/imersao-java-2-api/main/TopMovies_8.jpg" alt="image" style="height: 350px">
                     <p class="card-text mt-2">Nota: 8.9 - Ano: 1994</p>
                 </div>
             </div>
-            <div class="card text-white bg-dark mb-3" style="max-width: 18rem; max-heigth: 18rem">
-                <h4 class="card-header">The Lord of the Rings: The Fellowship of the Ring</h4>
+            <div class="card text-white bg-dark mb-3" style="width: 18rem;align-items: center;">
+                <h4 class="card-header" style="height: 90px;">The Lord of the Rings: The Fellowship of the Ring</h4>
                 <div class="card-body">
-                    <img class="card-img" src="https://raw.githubusercontent.com/alura-cursos/imersao-java-2-api/main/TopMovies_9.jpg" alt="image">
+                    <img class="card-img" src="https://raw.githubusercontent.com/alura-cursos/imersao-java-2-api/main/TopMovies_9.jpg" alt="image" style="height: 350px">
                     <p class="card-text mt-2">Nota: 8.8 - Ano: 2001</p>
                 </div>
             </div>
-            <div class="card text-white bg-dark mb-3" style="max-width: 18rem; max-heigth: 18rem">
-                <h4 class="card-header">The Good, the Bad and the Ugly</h4>
+            <div class="card text-white bg-dark mb-3" style="width: 18rem;align-items: center;">
+                <h4 class="card-header" style="height: 90px;">The Good, the Bad and the Ugly</h4>
                 <div class="card-body">
-                    <img class="card-img" src="https://raw.githubusercontent.com/alura-cursos/imersao-java-2-api/main/TopMovies_10.jpg" alt="image">
+                    <img class="card-img" src="https://raw.githubusercontent.com/alura-cursos/imersao-java-2-api/main/TopMovies_10.jpg" alt="image" style="height: 350px">
                     <p class="card-text mt-2">Nota: 8.8 - Ano: 1966</p>
                 </div>
             </div>
